infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: operator-price
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
